...
        let alert = UIAlertController(title: TextosApp.titleAlert.rawValue,
                                      message: TextosApp.msjAlert.rawValue,
                                      preferredStyle: .actionSheet)
        alert.addAction(UIAlertAction(title: "WhatsApp 1", style: .default, handler: { [self] _ in
                                        llamarWSP(mensaje: "Hola")
                                      }))
        alert.addAction(UIAlertAction(title: "WhatsApp 2", style: .default, handler: { [self] _ in
                                        abrirwspIFT()
                                      }))
        alert.addAction(UIAlertAction(title: TextosApp.btnCance.rawValue,
                                      style: .cancel, handler: nil))
        self.present(alert, animated: true)
    }
...
